--- a/styles.css
+++ b/styles.css
@@ -294,3 +294,25 @@ body {
     background-color: rgba(255, 255, 255, 0.478) !important; /* Faded background on hover */
     border-radius:10px;
 }
+
+.footer {
+    margin-top: 4rem;
+    color: black;
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
+.footer .btn-info {
+    margin: 0 0.5rem !important;
+    padding: 0.4rem 0.4rem !important;
+    transform: scale(1);
+}
+
+.footer .btn-info:hover {
+    transform: translateY(-2px) scale(1);
+}
+
+.footer p {
+    margin: 0;
+    padding: 0;
+}
